--- a/staff.html
+++ b/staff.html
@@ -119,7 +119,7 @@
     <div class="role-grid">
         <div class="role-card" onclick="bukaHalaman('kasir')"><span class="role-icon">🖥️</span><div class="role-title">Kasir</div><div class="role-desc">Pembayaran & Order</div></div>
         <div class="role-card" onclick="bukaHalaman('dapur')"><span class="role-icon">👨‍🍳</span><div class="role-title">Dapur</div><div class="role-desc">Antrian Masak</div></div>
-        <div class="role-card" onclick="bukaHalaman('admin')" style="border-top: 3px solid var(--danger)"><span class="role-icon">⚙️</span><div class="role-title">Owner</div><div class="role-desc">Menu & Laporan</div></div>
+        <div class="role-card" onclick="bukaHalaman('admin')" style="border-top: 3px solid var(--danger)"><span class="role-icon">⚙️</span><div class="role-title">Admin</div><div class="role-desc">Menu & Laporan</div></div>
     </div>
 </div>
 
@@ -246,7 +246,7 @@
   window.kembaliKeDash = () => { document.getElementById("fiturPage").classList.add("hidden"); document.getElementById("dashboardPage").classList.remove("hidden"); };
   window.bukaHalaman = async (role) => {
       if(role === 'admin') {
-          let input = await appPassword("Masukkan Password Owner:");
+          let input = await appPassword("Masukkan Password Admin:");
           if(input !== adminPass) return await appAlert("Akses Ditolak.");
       }
       document.getElementById("dashboardPage").classList.add("hidden");
@@ -368,7 +368,7 @@
                   </div>
                   <hr>
                   <div style="margin-top:10px"><label>Pass Staff:</label><div style="display:flex; gap:5px"><input id="newStaffPass" placeholder="${staffPass}" style="margin:0"><button class="btn btn-blue" onclick="gantiPass('staff')">Up</button></div></div>
-                  <div style="margin-top:10px"><label>Pass Owner:</label><div style="display:flex; gap:5px"><input id="newAdminPass" placeholder="${adminPass}" style="margin:0"><button class="btn btn-red" onclick="gantiPass('admin')">Up</button></div></div>
+                  <div style="margin-top:10px"><label>Pass Admin:</label><div style="display:flex; gap:5px"><input id="newAdminPass" placeholder="${adminPass}" style="margin:0"><button class="btn btn-red" onclick="gantiPass('admin')">Up</button></div></div>
                   <hr><button class="btn btn-red" style="width:100%" onclick="resetData()">⚠️ HAPUS DATA</button>
               </div>
           </div>
@@ -427,3 +427,4 @@
 </script>
 </body>
 </html>
+
