--- a/staff.html
+++ b/staff.html
@@ -252,6 +252,7 @@
       document.getElementById("fiturPage").classList.remove("hidden");
       renderFitur(role);
   };
+  window.menus = menus;
 
   function refreshCurrentView() { const mode = document.getElementById("kontenFitur").getAttribute("data-mode"); if(mode) renderFitur(mode); }
 
@@ -426,6 +427,7 @@
 </script>
 </body>
 </html>
+
 
 
 
