--- a/index.html
+++ b/index.html
@@ -128,9 +128,9 @@
   const appFirebase = initializeApp(firebaseConfig);
   const db = getFirestore(appFirebase);
 
-  // ============================================
-  //  CLASS DEFINITIONS (OOP)
-  // ============================================
+  
+  //  OOP class
+  
 
   class MenuItem {
       constructor(id, data) {
@@ -339,4 +339,5 @@
 </script>
 </body>
 </html>
+
 
