--- a/staff.html
+++ b/staff.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no" />
-<title>Sistem Staff Resto (OOP Final)</title>
+<title>RestoApp (Staff)</title>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
 <style>
   :root { --primary: #2d3436; --accent: #0984e3; --success: #00b894; --warning: #fdcb6e; --danger: #d63031; --bg: #dfe6e9; --card: #ffffff; --radius: 12px; }
@@ -296,4 +296,5 @@
 </script>
 </body>
 </html>
+
 
